# ICV

./: .gitignore  Application.cpp  Application.hpp  CMakeLists.txt  ConnectionsCollector.cpp  ConnectionsCollector.hpp  ConnectionsCollector_Linux.cpp  ConnectionsCollector_MacOS.cpp  ConnectionsCollector_Windows.cpp  ICV.cpp  README.md
